Update breast_cancer book

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get data informations"
+    "## Get data information"
    ]
   },
   {
@@ -2543,6 +2543,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Analysis result:\n",
+    "\n",
+    "The **SVC model's** performance profile makes it a uniquely reliable classifier for a critical task like cancer diagnosis, offering a compelling clinical advantage over Logistic Regression (LR).\n",
+    "\n",
+    "### 1. Superior Clinical Safety (Zero False Positives)\n",
+    "\n",
+    "The most compelling advantage is the SVC model's perfect **Precision of $1.000$** for malignant cases.\n",
+    "\n",
+    "* **Zero False Positives (FP=0):** This means that **every single prediction** the model makes for \"Malignant\" is correct (out of the test set).\n",
+    "* **Clinical Impact:** This is crucial in a diagnostic setting because it **eliminates the risk of False Alarms**. The model avoids subjecting healthy patients to unnecessary, stressful follow-up procedures, saving resources and mitigating severe anxiety.\n",
+    "\n",
+    "### 2. Balanced Patient Risk (Equivalent False Negatives)\n",
+    "\n",
+    "* **Equivalent FN Count:** While the LR model has a slightly higher $\\text{Recall}$, the SVC model's $2$ False Negatives are **nearly identical** to the LR model's $1$ or $2$ False Negatives. The marginal difference in Recall is often outweighed by the guarantee of perfect Precision.\n",
+    "* **Conclusion:** The SVC model achieves the **highest combined certainty** for a diagnostic tool: it guarantees no False Alarms while maintaining an extremely high sensitivity ($\\text{Recall} \\approx 0.953$) for detecting actual cancer cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# IV. Investigation and optimization:\n",
     "\n",
     "This section is dedicated to conducting further research and performing model benchmarking."
@@ -2960,9 +2981,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
     "# Define the number of columns (3) and rows (3 for the 9 top features)\n",
     "n_cols = 3\n",
     "n_rows = 3 \n",
@@ -2994,11 +3012,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most detailed visual evidence regarding the **separability** and **density distribution** of the top features between the two classes:\n",
+    "The **Box Plots** provide the most detailed statistical evidence regarding the **separability** and **distribution** of the top features between the two classes:\n",
     "\n",
-    "* **Near-Perfect Discrimination:** For the most critical features (e.g., `concave_pointsC`, `perimeterC`, `radiusC`), the violins for the **Malignant (1)** and **Benign (0)** classes show **minimal to no overlap**. This visually validates that these are powerful, standalone predictors.\n",
-    "* **Density Concentration:** The wider sections of the violins clearly indicate the range where the majority of data for each class is concentrated. This confirms that the density for the malignant class is consistently shifted towards **higher feature values**.\n",
-    "* **Full Distribution Context:** Unlike simple box plots, the violin shape displays the entire probability density. This confirms that the high separation observed is a property of the *bulk* of the data, reinforcing the efficacy of the final 9 features in capturing the morphological differences necessary for accurate diagnosis."
+    "* **Near-Perfect Discrimination:** For the most critical features (e.g., `concave_pointsC`, `perimeterC`, `radiusC`), the boxes (representing the Interquartile Range, or middle 50% of data) for the **Malignant (1)** and **Benign (0)** classes show **minimal to no overlap**. This visually validates that these are powerful, standalone predictors.\n",
+    "* **Median and Quartile Shift:** The median line and the entire box for the malignant class are consistently **shifted toward significantly higher values** than those for the benign class. This confirms that the central tendency of these morphological features is a strong indicator of malignancy.\n",
+    "* **Outlier Visualization:** Unlike basic mean/std summaries, the box plots clearly display **outliers** (individual points outside the whiskers), reinforcing the need for the **StandardScaler** to mitigate their influence on distance-based models."
    ]
   },
   {
@@ -3299,6 +3317,19 @@
     "plt.legend(title='Model', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis result:\n",
+    "\n",
+    "The re-evaluation of the models with the optimized **Top 9 feature set** shows that the high performance achieved by the original models was **maintained**, with only minor fluctuations and one specific improvement:\n",
+    "\n",
+    "* **Overall Performance Maintained:** For the highly accurate models (**SVC, DT, and RF**), there was **no significant change** in the core metrics ($\\text{Accuracy}, \\text{Recall}, \\text{F1-score}$). This confirms that the 21 removed features were **redundant**, and the Top 9 features successfully captured all the necessary predictive signal.\n",
+    "* **Improvement in Logistic Regression (LR):** The LR model benefited most from the refined feature set, suggesting the removal of some noisy or highly collinear features allowed the linear model to **optimize its weights more effectively**. This minor bump in performance solidifies LR as the most robust high-performing model for this dataset.\n",
+    "* **Conclusion on Optimization:** The feature selection process was successful not because it boosted accuracy (which was already at a ceiling), but because it resulted in a **$70\\%$ reduction in model complexity** (from 30 features to 9) while **maintaining deployment-ready accuracy** across the board."
    ]
   },
   {
