Update breast_cancer notebook

--- a/breast_cancer.ipynb
+++ b/breast_cancer.ipynb
@@ -3372,10 +3372,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VI. Referrence:\n",
-    "\n",
+    "# VI. Referrences:\n",
     "- https://www.geeksforgeeks.org/machine-learning/feature-selection-using-random-forest/\n",
-    "- https://medium.com/@prasannarghattikar/using-random-forest-for-feature-importance-118462c40189"
+    "- https://medium.com/@prasannarghattikar/using-random-forest-for-feature-importance-118462c40189\n",
+    "\n",
+    "**Citation:** Wolberg, W., Mangasarian, O., Street, N., & Street, W. (1993). Breast Cancer Wisconsin (Diagnostic) [Dataset]. UCI Machine Learning Repository. [https://doi.org/10.24432/C5DW2B](https://doi.org/10.24432/C5DW2B).\n",
+    "\n",
+    "**URL:** [https://archive.ics.uci.edu/dataset/17/breast+cancer+wisconsin+diagnostic](https://archive.ics.uci.edu/dataset/17/breast+cancer+wisconsin+diagnostic)"
    ]
   }
  ],
